# broadband_churn

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
conf/features/: feature_groups.yaml
conf/model/: cox_ph.yaml  lightgbm.yaml
conf/monitoring/: drift_thresholds.yaml
docker/: Dockerfile.api  Dockerfile.training  docker-compose.yml
notebooks/: 01_eda.ipynb  02_data_quality.ipynb  03_feature_engineering.ipynb  04_modelling.ipynb  05_evaluation.ipynb  06_explainability.ipynb  07_survival_uplift.ipynb  08_mlops_demo.ipynb
pipelines/: daily_scoring_dag.py  drift_monitor_dag.py  weekly_retrain_dag.py
src/churn/: config.py
src/churn/api/: main.py  model_loader.py  schemas.py
src/churn/data/: loader.py  splitter.py  validator.py
src/churn/evaluation/: business_impact.py  metrics.py  plots.py
src/churn/explainability/: churn_segments.py  local_explainer.py  shap_explainer.py
src/churn/features/: call_features.py  contract_features.py  feature_store.py  target_encoder.py  usage_features.py
src/churn/models/: base_model.py  calibrator.py  lgbm_model.py  survival_model.py  uplift_model.py
src/churn/monitoring/: alerting.py  drift_detector.py  psi_calculator.py
src/churn/scoring/: batch_scorer.py  output_formatter.py
src/churn/training/: trainer.py  tuner.py
tests/: check_data.py  conftest.py  smoke_imports.py
tests/data_quality/: test_leakage.py
tests/unit/: test_contract_features.py  test_metrics.py  test_splitter.py  test_validator.py
