[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn"
version = "0.1.0"
description = "UK Telecoms LTD — Customer Churn Prediction Pipeline"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Data Science Team"}]

# ── Core runtime dependencies ─────────────────────────────────────────────────
dependencies = [
    # Data
    "duckdb==1.1.1",
    "pandas==2.2.3",
    "numpy==2.1.2",
    "pyarrow>=17.0.0",
    "scipy>=1.14.0",
    # ML
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "imbalanced-learn>=0.12.0",
    "lifelines>=0.29.0",
    "optuna>=4.1.0",
    "feature-engine>=1.8.0",
    # Explainability
    "shap>=0.46.0",
    # Experiment tracking
    "mlflow>=2.17.0",
    # Data validation
    "pandera>=0.20.0",
    # Monitoring
    "evidently>=0.4.43",
    # Visualisation
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    # Config
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
# uv sync --extra notebook
notebook = [
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "matplotlib-inline==0.1.7",
    "nbconvert[webpdf]>=7.6.0",
    "playwright>=1.40.0",
]
# uv sync --extra api
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
]

# ── Dev/test dependency group (uv sync --group dev) ──────────────────────────
# PEP 735 [dependency-groups] — never installed as package extras by
# downstream consumers of this package.

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "nbstripout>=0.7.1",
    "pre-commit>=4.0.0",
]

# ── uv configuration ──────────────────────────────────────────────────────────

[tool.uv]
# Resolve against all optional extras so the lockfile is complete.
# Individual installs use: uv sync / uv sync --extra notebook / --extra api
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["churn"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/churn"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
